<resources>
    <string name="app_name">Portachiavi95</string>

    <string name="USER_DATA">user_data</string>

    <string name="Application_Description">Inserire la password </string>

    <string name="APPLICATION_MASTER_PWD_SET_TEXT">Inserire la password di accesso (se la password non esiste verrà salvata)</string>
    <string name="APPLICATION_MASTER_PWD_EDIT_TEXT">Premere sul pulsante modifica per modificare la password di accesso.</string>
    <string name="Password_advice">stimola la diuresi</string>

    <string name="PASSWORD_LABEL">Password</string>

    <string name="ELENCO_ACCOUNT">ELENCO ACCOUNT</string>
    <string name="SELECT_ALL_BUTTON">Seleziona tutto</string>
    <string name="DELETE_BUTTON">Elimina</string>

    <string name="SAVED_MESSAGE">Salvataggio effettuato!</string>
    <string name="PWD_WRONG_LENGTH_MESSAGE">La password deve essere almeno di 8 caratteri</string>
    <string name="NUOVO_ACCOUNT">NUOVO ACCOUNT</string>
    <string name="DESCRIPTION_LABEL">Descrizione:</string>
    <string name="USERNAME_LABEL">Username</string>
    <string name="MAIL_LABEL">E-mail</string>

    <string name="EDIT_ACCOUNT">Modifica account - %1$s</string>
    <!--NB si possono mettere dei parametri nei valori stringa, con %1$s -->
    <!--%1$ (1 sta per il primo parametro, $s indica tipo stringa  -->

    <string name="DELETE_CONFIRMATION_MESSAGE">Sei sicuro di voler eliminare gli elementi selezionati?</string>
    <string name="YES">Si</string>
    <string name="NO">No</string>

    <string name="DELETE_SUCCESS_MESSAGE">Accounts eliminati con successo!</string>
    <string name="DESELECT_ALL">Deseleziona Tutto</string>
    <string name="PASSWORD">password</string>
    <string name="KEEP_ACCESS_TEXT">Mantieni accesso</string>
    <string name="SALVA">Salva</string>
    <string name="SAVE_PWD_BUTTON_LABEL">Salva</string>
    <string name="LOGIN">Login</string>

    <string name="WRONG_PASSWORD_MESSAGE">La password inserita non è valida</string>

    <string name="SETTINGS_DESCRPTION_TEXT">L\\\'opzione può essere modificata dalle impostazioni</string>
    <string name="EDIT_MASTER_PASSWORD">Modifica MASTTER PASSWORD</string>
    <string name="SETTINGS">IMPOSTAZIONI</string>

    <string name="SETTINGS_SAVED_MESSAGE">Impostazioni salvate con successo</string>
    <string name="NO_ACCOUNTS_TO_DELETE_MESSAGE">Nessun account selezionato</string>
</resources>
