<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/pwdMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/rossoAcceso"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/APPLICATION_MASTER_PWD_SET_TEXT"
            android:justificationMode="inter_word"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/pwdEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/PASSWORD"
                android:inputType="textPassword"
                />

            <ImageView
                android:id="@+id/togglePasswordImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/baseline_visibility_black_24"
                />
            <!--id ha stesso nome di altra IV, ma sono 2 contesti diversi-->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/baseline_create_black_24"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#000000"
                android:text="@string/KEEP_ACCESS_TEXT"
                />

            <Switch
                android:id="@+id/toggleAccessSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/baseline_save_black_24"
            android:text="@string/SALVA"/>
        <!--android:drawableLeft="@drawable/baseline_create_black_36"-->

    </LinearLayout>

</FrameLayout>